# wasm-sd

./: .gitignore  .gitmodules  BUILD  CMakeLists.txt  README.md  WORKSPACE  build.sh  default.profraw  envoy.yaml  envoy_filter_http_wasm_example.cc  generate_wasm.sh  null_plugin_wrapper.cc  proxy_wasm_intrinsics.cc  proxy_wasm_intrinsics.h  stackdriver-wasm.cc  stackdriver.cc  wasm-sd.wasm  wasm-sd.wat
api/: proxy_wasm_intrinsics.cc  proxy_wasm_intrinsics.h  proxy_wasm_intrinsics.js
api/wasm/cpp/: proxy_wasm_enums.h  proxy_wasm_impl.h  proxy_wasm_intrinsics.cc  proxy_wasm_intrinsics.h  proxy_wasm_intrinsics.pb.cc  proxy_wasm_intrinsics.pb.h  proxy_wasm_intrinsics.proto
config/: BUILD  stackdriver_module.pb.cc  stackdriver_module.pb.h  stackdriver_module.proto
google/api/: BUILD  distribution.pb.cc  distribution.pb.h  http.pb.cc  http.pb.h  metric.pb.cc  metric.pb.h  monitored_resource.pb.cc  monitored_resource.pb.h  monitored_resource.proto
google/logging/type/: BUILD  http_request.pb.cc  http_request.pb.h  log_severity.pb.cc  log_severity.pb.h
google/logging/v2/: BUILD  log_entry.pb.cc  log_entry.pb.h  log_entry.proto  (+7 more)
google/rpc/: BUILD  status.pb.cc
include/: stackdriver.h  stackdriver_exporter_options.h
istio/: BUILD  measure.h  tag.h  view.h
logging/: BUILD  logger.cc  logger.h  options.h
opencensus/: README.md  opencensus.bzl
opencensus-cmake/: OpenCensusExampleDeps.cmake  opencensus-cpp.CMakeLists.txt
opencensus/context/: BUILD  context.h
opencensus/stats/: BUILD  distribution.h  recording.h  stats_exporter.h  view_data.h
opencensus/tags/: BUILD
opencensus/trace/: BUILD  sampler.h
stats/: CMakeLists.txt  measure.cc  measure.h  measure_descriptor.h  measure_registry.cc  measure_registry.h  measure_registry_impl.cc  measure_registry_impl.h  stats.h
stats/internal/: aggregation.cc  aggregation.h  aggregation_window.cc  aggregation_window.h  bucket_boundaries.cc  bucket_boundaries.h  delta_producer.cc  delta_producer.h  distribution.cc  distribution.h  measure_data.cc  measure_data.h  stats_manager.cc  stats_manager.h  view.cc  view.h  view_data.h  view_descriptor.cc  view_descriptor.h
stats/tags/: context.cc  context.h  context_util.cc  context_util.h  hash_mix.h  tag_key.cc  tag_key.h  tag_map.cc  tag_map.h  with_context.cc  with_context.h  with_tag_map.cc  with_tag_map.h
(+67 files in other folders)
